# PyCNP

./: .clang-format  .gitignore  LICENSE  README.md  example.py  meson.build  pyproject.toml  test.py
.github/workflows/: DOC.yml  ci.yml  wheels.yml
Instances/CNP/model/: BarabasiAlbert_n1000m1.txt  BarabasiAlbert_n2500m1.txt  BarabasiAlbert_n5000m1.txt  BarabasiAlbert_n500m1.txt  ErdosRenyi_n2344.txt  ErdosRenyi_n466.txt  ErdosRenyi_n941.txt  ForestFire_n1000.txt  ForestFire_n2000.txt  ForestFire_n250.txt  ForestFire_n500.txt  WattsStrogatz_n1000.txt  WattsStrogatz_n1500.txt  WattsStrogatz_n250.txt  WattsStrogatz_n500.txt
Instances/CNP/realworld/: Circuit.txt  EU_flights.txt  Ecoli.txt  Hamilton1000.txt  Hamilton2000.txt  Hamilton3000a.txt  Hamilton3000b.txt  Hamilton3000c.txt  Hamilton3000d.txt  Hamilton3000e.txt  Hamilton4000.txt  Hamilton5000.txt  Treni_Roma.txt  USAir97.txt  astroph.txt  condmat.txt  facebook.txt  grqc.txt  hepph.txt  hepth.txt  humanDiseasome.txt  openflights.txt
Instances/DCNP/R1/: LindenStrasse.txt  Sanjuansur2.txt  Sawmill.txt  SmallWorld.txt  USAir97.txt  attiro.txt  chesapeake.txt  dolphins.txt  hi_tech.txt  karate.txt  lesmis.txt  mexican.txt  netscience.txt  santafe.txt
Instances/DCNP/R2/: Bovine.txt  Circuit.txt  EU_flights.txt  Ecoli.txt  Hamilton1000.txt  Hamilton2000.txt  Hamilton3000a.txt  Hamilton3000b.txt  Hamilton3000c.txt  Hamilton3000d.txt  Hamilton3000e.txt  Hamilton4000.txt  Hamilton5000.txt  OClinks.txt  Treni_Roma.txt  USAir97.txt  astroph.txt  facebook.txt  grqc.txt  hepph.txt  hepth.txt  humanDiseasome.txt  openflights.txt  powergrid.txt  yeast1.txt
Instances/DCNP/S1/: ba1(3).txt  ba1(6).txt  ba1(9).txt  ba2(3).txt  ba2(6).txt  ba2(9).txt  er1(3).txt  er1(6).txt  er1(9).txt  er2(3).txt  er2(6).txt  er2(9).txt  gnm1(3).txt  gnm1(6).txt  gnm1(9).txt  gnm2(3).txt  gnm2(6).txt  gnm2(9).txt  gnm3(3).txt  gnm3(6).txt  gnm3(9).txt
Instances/DCNP/S2/: BA1000.txt  BA250.txt  BA500.txt  ER1000.txt  ER250.txt  ER500.txt  FF250.txt  GNM250.txt  GNM500.txt  WS250a.txt  WS250b.txt  WS500.txt
buildtools/: README.md  __init__.py  build_extensions.py  build_wrapper.py  extract_docstrings.py  find_headers.py  get_version.py
docs/source/: conf.py  index.rst
docs/source/api/: algorithm.rst  constants.rst  crossover.rst  index.rst  model.rst  problemdata.rst  read.rst  stop.rst  utils.rst
docs/source/api/cpp/: algorithm.rst  crossover.rst  graph.rst  search.rst
docs/source/dev/: contributing.rst
docs/source/examples/: example1.rst  example2.rst  example3.rst  index.rst
docs/source/setup/: concepts.rst  getting_help.rst  installation.rst  introduction_to_cnp.rst  introduction_to_ma.rst
pycnp/: MemeticSearch.py  Model.py  ProgressPrinter.py  Result.py  Statistics.py  __init__.py  _pycnp.pyi  constants.py  exceptions.py  params.py  pycnp_docs.h  read.py  validation.py  visualization.py
pycnp/cpp/: Population.cpp  Population.h  ProblemData.cpp  ProblemData.h  RandomNumberGenerator.h  SearchResult.h  pybind.cpp
pycnp/cpp/Graph/: CNP_Graph.cpp  CNP_Graph.h  DCNP_Graph.cpp  DCNP_Graph.h  Graph.cpp  Graph.h  Types.h
pycnp/cpp/crossover/: doubleBackboneBasedCrossover.cpp  doubleBackboneBasedCrossover.h  inherit_repair_recombination.cpp  inherit_repair_recombination.h  pybind.cpp  reduceSolveCombine.cpp  reduceSolveCombine.h
pycnp/cpp/search/: BCLSStrategy.cpp  BCLSStrategy.h  CBNSStrategy.cpp  CBNSStrategy.h  CHNSStrategy.cpp  CHNSStrategy.h  DLASStrategy.cpp  DLASStrategy.h  Search.cpp  Search.h  SearchStrategy.h  SearchUtils.h
pycnp/crossover/: __init__.py  _crossover.pyi  crossover_docs.h  double_backbone_based_crossover.py  inherit_repair_recombination.py  reduce_solve_combine.py
pycnp/stop/: CombinedCriterion.py  MaxIterations.py  MaxRuntime.py  NoImprovement.py  StoppingCriterion.py  __init__.py
tests/: test_Model.py  test_Result.py  test_Statistics.py  test_exceptions.py  test_params.py  test_read.py  test_stop.py  test_validation.py
