[project]
name = "pycnp"
version = "0.1.5"
description = "A high-performance Python solver for Critical Node Problems"
authors = [
    { name = "Bo Xue", email = "x3219658574@126.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
    "graph",
    "optimization",
    "critical-node-problem",
    "algorithms",
    "metaheuristic",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.0; python_version < '3.12'",
    "numpy>=1.26.0; python_version >= '3.12'",
]

[project.urls]
homepage = "https://github.com/xuebo100/PyCNP"
documentation = "https://pycnp.readthedocs.io"
source = "https://github.com/xuebo100/PyCNP"
issues = "https://github.com/xuebo100/PyCNP/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-immaterial>=0.11.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "numpydoc>=1.5.0",
    "nbsphinx>=0.9.0",
]
examples = [
    "psutil>=5.8.0",
    "matplotlib>=3.5.0",
]
visualization = [
    "pyvis>=0.3.0",
]

[dependency-groups]
build = [
    "meson>=1.0.0",
    "ninja>=1.11.1",
    "pybind11>=2.10.0",
    "docblock>=0.1.6",
]

dev = [
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-immaterial>=0.11.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "numpydoc>=1.5.0",
    "nbsphinx>=0.9.0",
]

examples = [
    "psutil>=5.8.0",
    "matplotlib>=3.5.0",
]

visualization = [
    "pyvis>=0.3.0",
]



[tool.uv]
default-groups = ["build", "dev"]
package = true


[tool.ruff]
line-length = 88
exclude = ["extern/*"]


[tool.ruff.lint]
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TC"
]

[tool.ruff.lint.isort]
case-sensitive = true


[tool.mypy]
ignore_missing_imports = true
exclude = [
    "^extern/",
    "^docs/",
    "^build/",
    "^dist/",
]


[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-report=xml",
    "--cov-report=term",
    "--numprocesses=auto",
]
testpaths = "tests"


[tool.coverage.run]
omit = [
    "buildtools/*.py",  # 构建脚本
    ".venv/*",
    "docs/*",
    "tests/*",
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract",
    "if TYPE_CHECKING:",
]


[tool.cibuildwheel]
# 我们不支持旧的Python版本和一些不常见的平台
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "pp3*-* *_ppc64le *_i686 *_s390x *-win32 *-musllinux*"
build-frontend = "build"
test-requires = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
test-command = 'python -c "import pycnp; import pycnp._pycnp; import pycnp.crossover._crossover"'


[tool.poetry]
include = [
    { path = "docs/", format = "sdist" },
    { path = "tests/", format = "sdist" },
    { path = "scripts/", format = "sdist" },

    { path = "meson.build", format = "sdist" },
    { path = "buildtools/*.py", format = "sdist" },

    { path = "pycnp/**/*.so", format = "wheel" },
    { path = "pycnp/**/*.pyd", format = "wheel" },
]
exclude = [
    "docs/build",
]
packages = [
    { include = "pycnp" },
]


[tool.poetry.build]
generate-setup-file = false
script = "buildtools/build_wrapper.py"


[build-system]
requires = ["poetry-core>=1.0.0", "meson", "ninja", "pybind11", "docblock"]
build-backend = "poetry.core.masonry.api"
